--- a/index.html
+++ b/index.html
@@ -4,41 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <linl rel="stylesheet" type="text/css" href= style.css>
+    <linl rel="stylesheet" href= style.css>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        .myfont{
+          font-family: 'Monoton', cursive;
+          font-size: 50px;
+        }
+
+        .myfontsize{
+          font-family: 'Monoton', cursive;
+          font-size: 20px;
+        }
+
+
+    </style>
 </head>
 <body>
+  <!-- nav bar starts -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Aida</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand myfont" href="#">Aida</a>
         <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link myfontsize" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link myfontsize" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link myfontsize" href="#">About</a>
             </li>
           </ul>
         </div>
       </nav>
-
-      <div class="media">
-        <img src="/Images/aboutme.jpg">
-        <div class="media-body">
-          <h1 class="mt-0">About Me</h1>
-          <p>I was born in Lithuania and came to the states when i was seven years old. I can speak Lithuanian fluently.
-            I have been a professional hair colorist for the past six years in Chicago. I have a huge obsession with all sorts of different cacti and collect them. 
-
+        <!-- nav bar ends -->
           </p>
         </div>
       </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="page-header">
+              <h1>About Me</h1>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+              </div>
+              <div class="col-md-9">
+                <p>
+                 My name is Aida Blinstrubyte. Im originally from Lithuania. I grew up in the suburbs of Chicago, but now I am currently living in Chicago, Illinois.
+                 I've been a hair colorist for the past six years of my life. I have an obsession with collecting all types of different cacti. My dogs name is Bella 
+                 and she is 10 years old. I love traveling to new warm locations that I havent been to before. I love to go hiking whenever i go to a mountainous place.
+                 In my free time i love discovering new pescatarian dishes, doing yoga, and watching any new show on Netflix.
+                </p>
+              </div>
+            </div>
+          </div>
     
 </body>
 </html>
