--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <linl rel="stylesheet" href= style.css>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href= style.css>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+
         .myfont{
           font-family: 'Monoton', cursive;
           font-size: 50px;
@@ -16,17 +17,26 @@
         .myfontsize{
           font-family: 'Monoton', cursive;
           font-size: 20px;
+
         }
+        h1{ 
+          font-family: 'Monoton', cursive;
+        }
+
+        p{
+          font-family:'Ubuntu Condensed', sans-serif;
+        }
+
 
 
     </style>
 </head>
 <body>
   <!-- nav bar starts -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand myfont" href="#">Aida</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <a class="navbar-brand myfont" href="#">Aida</a>
         <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
-          <ul class="navbar-nav">
+        <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link myfontsize" href="#">Contact</a>
             </li>
@@ -36,9 +46,8 @@
             <li class="nav-item">
               <a class="nav-link myfontsize" href="#">About</a>
             </li>
-          </ul>
-        </div>
-      </nav>
+        </ul>
+  </nav>
         <!-- nav bar ends -->
           </p>
         </div>
@@ -64,5 +73,8 @@
             </div>
           </div>
     
+          <footer>
+            
+          </footer>
 </body>
 </html>
