--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
         <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link myfontsize" href="#">Contact</a>
+              <a class="nav-link myfontsize" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link myfontsize" href="#">Portfolio</a>
+              <a class="nav-link myfontsize" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link myfontsize" href="#">About</a>
+              <a class="nav-link myfontsize" href="./index.html">About</a>
             </li>
           </ul>
         </div>
