--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
   <!-- nav bar starts -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
      <a class="navbar-brand myfont" href="#">Aida</a>
-        <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
-        <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link myfontsize" href="./contact.html">Contact</a>
+        <div class="collapse navbar-collapse newnav" id="navbarNav">
+        <!-- <ul class="navbar-list"> -->
+            <li class="contact myfontsize" href="./contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link myfontsize" href="./portfolio.html">Portfolio</a>
+            <li  class="portfolio myfontsize" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link myfontsize" href="./index.html">About</a>
+            <li class="index myfontsize" href="./index.html">About</a>
             </li>
         </ul>
   </nav>
