--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
+        <div class="collapse navbar-collapse newnav" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link myfontsize" href="./contact.html">Contact</a>
@@ -28,5 +28,28 @@
           </ul>
         </div>
       </nav>
+
+      <h2>Portfolio</h2>
+
+
+<div class="row">
+  <div class="column columns">
+    <img src="https://lh3.googleusercontent.com/vYPEH1v3bVY_P0tHE1lfvBLK8cw1sJ1lw_gSGjp3g6kJhdyLfXn52ytTf5Pv-GfAJk7TfOMbyp9LBD1S2Z6DEnU4uWOEc_o37YLN5tLqQVMPtr8ZMuJkDB5dxHeHeHXBlRZH7qumEQ" alt="Bella" style="width:100%">
+  </div>
+  <div class="column columns">
+    <img src="https://lh3.googleusercontent.com/1OUK7967adb7Uq2Zz7ksWnd45q0ZzS9mN2ZLxyGrEsvFRQ45zOCpBcql0EQ0wAho23X-KzLIXsANz3JF7xzmUF8KDgk07WbCX2_iJXkUF42eP5iqcIVzOl7k5_T_D1gNlyNRT-Ytaw" alt="Hiking" style="width:100%">
+  </div>
+  <div class="column columns row">
+    <img src="https://lh3.googleusercontent.com/fTGgeubP8gFcT8e08b6Mqd28rmHh_WviC4sZSrDFn33aO-nD7w6ECBlzB0tbtngh9xS_4uyNvqeVCmuVWGiuNw1E0tDHd7oI4BddiCHofk83GhpvJ0O-Ka67XhjHaxSvnakn1AeALA" alt="Demoandi" style="width:100%">
+  </div>
+</div>
+<div class="column columns ">
+  <img src="https://lh3.googleusercontent.com/AUaZCF0_9iGNYVvfFHePls1JiIliL00c3xP_KtQAgJi1G5N6CzNIzBB78uP1WgFeOxXG55XMipCSbZC8QxmyjTkDVUjG8I1sFDdOYEn58j1QHCqK3myssKVjY1kj8oLuhzBKRfzHXw" alt="Mexico" style="width:25%%">
+</div>
+</div>
+<div class="column columns">
+  <img src="https://lh3.googleusercontent.com/7f1-9e-dI2nudDY_DFxhXVgHy1QZmjyb3rTB9tq3Tl48abrJEcMeZ4jJ0EAsvyR-iaUD1Vn4ClX_Y5BEp9r7jweTIDBYdJQdjrMKEqmL6bxDub54-JUQeGI8x4XAfhXN9dJZM8Qx8w" alt="Hair" style="width:25%">
+</div>
+
 </body>
 </html>
