--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <p>
                  My name is Aida Blinstrubyte. Im originally from Lithuania. I grew up in the suburbs of Chicago, but now I am currently living in Chicago, Illinois.
                  I've been a hair colorist for the past six years of my life. I have an obsession with collecting all types of different cacti. My dogs name is Bella 
-                 and she is 10 years old. I love traveling to new warm locations that I havent been to before. I love to go hiking whenever i go to a mountainous place.
-                 In my free time i love discovering new pescatarian dishes, doing yoga, and watching any new show on Netflix.
+                 and she is 10 years old. I love traveling to new warm locations that I havent been to before. 
+                 In my free time i love discovering new pescatarian dishes,hiking, doing yoga, and watching any new show on Netflix.
                 </p>
               </div>
             </div>
