--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
           <div class="col-md-8"></div>
           <h5 class="card-title">Contact</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"></p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
           <div class= "col-md-8">
@@ -44,12 +44,12 @@
         
         <form>
           <div class="form-group">
-            <label for="exampleInputEmail1">Name</label>
+            <label for="name">Name</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="exampleInputPassword1">Email</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
           </div>
           <div class="form-check">
