--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
         <img class="card-img-top" src="Images/bella.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
     </div>
