--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
     </div>
     <div class="col-md-2">
       <div class="card cards ">
-        <img class="card-img-top" src="images/mountains.JPG" alt="Card image cap" >
+        <img class="card-img-top" src="images/mountains.JPG" alt="mountains" >
         <div class="card-body">
           
         </div>
