--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
   </div>
   <div class="col-md-2">
     <div class="card cards">
-      <img class="card-img-top" src="Images/mexico.JPG" alt="Card image cap">
+      <img class="card-img-top" src="Images/mexico.JPG" alt="">
       <div class="card-body">
        
       </div>
@@ -64,7 +64,7 @@
     </div>
     <div class="col-md-2">
       <div class="card cards ">
-        <img class="card-img-top" src="images/mountains.JPG" alt="mountains" >
+        <img class="card-img-top" src="Images/hair.JPG" alt="mountains" >
         <div class="card-body">
           
         </div>
