--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 <footer>
       <div class="card text-center">
           <div class="card-body">
-           <p class="card-text">&copy;Copyright 2020 Aidabee</p>
+           <p class="card-text">&copy;Copyright 2020 Aida</p>
           </div>
       </div>
   </footer>
