--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 </div>
          
 </body>
+
 <footer>
+<div class="bg-light">&copy; Copyright Aida</div>
+</footer>
+
+<!-- <footer>
       <div class="card text-center">
           <div class="card-body">
-           <p class="card-text">&copy;Copyright 2020 Aidabee</p>
+           <p class="card-text">&copy;Copyright 2020 Aida</p>
           </div>
       </div>
-  </footer>
+  </footer> -->
 </html>
 
