--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,7 @@
  
 <body>
 
-<footer>
-      <div class="card text-center">
-          <div class="card-body">
-           <p class="card-text">&copy;Copyright 2020 Aida</p>
-          </div>
-      </div>
-  </footer>
+  <footer>
+    <div class="bg-light">&copy; Copyright Aida</div>
+    </footer>
 </html>
