--- a/portfolio.html
+++ b/portfolio.html
@@ -89,10 +89,6 @@
 </div>
 </body>
 <footer>
-      <div class="card text-center">
-          <div class="card-body">
-           <p class="card-text">&copy;Copyright 2020 Aida</p>
-          </div>
-      </div>
+  <div class="bg-light">&copy; Copyright Aida</div>
   </footer>
 </html>
