--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href= style.css>
@@ -11,7 +11,7 @@
 <body>
   <!-- nav bar from bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light newnav">
-        <a class="navbar-brand myfont" href="index.html">Aida</a>
+        <a class="navbar-brand myfont " href="index.html">Aida</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -155,6 +155,33 @@
       </div>
   </div>
 <!-- sixth row with images  -->
+<div class="row mb-3"> 
+  <div class="col-md-4">
+  </div>
+
+<div class="col-md-2">
+  <div class="card cards">
+    <img class="card-img-top" src="Images/NoteTaker.png" alt="screenshot of a Note Taking App" >
+    <div class="card-body">
+      <a href="https://aidabyte.github.io/Note-Taker-Hw/" target="_blank">Note Taker</a>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-2">
+  <div class="card cards">
+    <img class="card-img-top" src="Images/MusicRater.png" alt="screenshot of a music search app with likes">
+    <div class="card-body">
+      <a href="https://github.com/achueng/Music-Rater" target="_blank">Music Rater</a>
+      <br>
+      <a href="https://music-rater.herokuapp.com/" target="_blank"> Deployed</a>
+    </div>
+  </div>
+</div>
+  <div class="col-md-4">
+    </div>
+</div>
+
 </div>
 <!-- the end of the fluid div -->
 </body>
